[tool.poetry]
name = "pythoncommerce"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"
future = "^1.0.0"
product = "^0.1.1.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"

[tool.isort]
line-length = 119

[tool.black]
line-length = 119
exclude = ".git"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
